Fix layout shift on page load (#535)

--- a/src/Elastic.Markdown/Assets/styles.css
+++ b/src/Elastic.Markdown/Assets/styles.css
@@ -85,7 +85,7 @@
 	}
 	
 	.content-container {
-		@apply w-full max-w-[80ch];
+		@apply w-full max-w-[80ch] lg:w-[80ch];
 	}
 
 	.applies {
